Alignment issues corrected

--- a/scss/editor.scss
+++ b/scss/editor.scss
@@ -6,19 +6,19 @@
 
 //Images and Videos //
 
-.align-left {
+.image-align-left {
 	float: left;
 	padding: 1em;
 	padding-right: 2em;
 }
 
-.align-right {
+.image-align-right {
 	float: right;
 	padding: 1em;
 	padding-left: 2em;
 }
 
-.align-center {
+.image-align-center {
 	float: none;
 	text-align: center;
 	padding: 1em;
@@ -349,7 +349,7 @@ h6 {
 }
 
 @media #{$small-only} {
-	.align-left {
+	.image-align-left {
 		float: none;
 		display: block;
 		text-align: center;
@@ -367,7 +367,7 @@ h6 {
 		
 	}
 
-	.align-right {
+	.image-align-right {
 		float: none;
 		display: block;
 		text-align: center;
